--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/logo.jpg
+    - assets/wpp.jpg
+    - assets/um.jpg
+    - assets/dois.jpg
+    - assets/tres.jpg
+    - assets/logo2.jpg
+    - assets/mogi.jpg
+
+  # To add assets to your application, add an assets section, like this:
   # assets:
   #   -
 
