--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_core: ^0.4.0
   firebase_auth: ^0.14.0
   cloud_firestore: ^0.12.9
+  load: ^0.1.5+1
   flutter:
     sdk: flutter
 
