--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_auth: ^0.14.0
   cloud_firestore: ^0.12.9
   load: ^0.1.5+1
+  datetime_picker_formfield: ^0.2.0
+  intl: ^0.16.0
   
   flutter:
     sdk: flutter
