--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cloud_firestore: 0.11.0
   load: ^0.1.5+1
   datetime_picker_formfield: ^0.2.0
+  provider: ^3.1.0
   intl: ^0.15.0
   
   flutter:
