--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   provider: ^3.1.0
   intl: ^0.15.0
   image_picker: ^0.6.0
+  page_transition: ^1.1.0
+  smooth_star_rating: ^1.0.3
+
   
   flutter:
     sdk: flutter
