--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   image_picker: ^0.6.0
   page_transition: ^1.1.0
   smooth_star_rating: ^1.0.3
+  gradient_app_bar: ^0.1.3
 
   
   flutter:
