--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   page_transition: ^1.1.0
   smooth_star_rating: ^1.0.3
   gradient_app_bar: ^0.1.3
+  url_launcher: ^5.2.7
 
   
   flutter:
