--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,17 +83,30 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Gelasio
+      fonts:
+        # - asset: fonts/Gelasio-Bold.ttf
+        # - asset: fonts/Gelasio-BoldItalic.ttf
+        # - asset: fonts/Gelasio-Italic.ttf
+        # - asset: fonts/Gelasio-Medium.ttf
+        # - asset: fonts/Gelasio-MediumItalic.ttf
+        - asset: fonts/GelasioRegular.ttf
+        # - asset: fonts/Gelasio-SemiBold.ttf
+        # - asset: fonts/Gelasio-SemiBoldItalic.ttf
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+    # - family: Schyler
+    #   fonts:
+    #     - asset: fonts/Schyler-Regular.ttf
+    #     - asset: fonts/Schyler-Italic.ttf
+    #       style: italic
+    # - family: Trajan Pro
+    #   fonts:
+    #     - asset: fonts/TrajanPro.ttf
+    #     - asset: fonts/TrajanPro_Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
