Pagina de login refeita
falta linkar ao firestore e ao drawer do ulisses

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   url_launcher: ^5.2.7
   http: ^0.12.0+2
   flutter_webview_plugin: ^0.3.10
+  flutter_screenutil: ^0.4.2
+
 
 
   
@@ -87,6 +89,17 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: CustomIcons
+      fonts:
+        - asset: fonts/CustomIcons.ttf
+
+    - family: Poppins-Bold
+      fonts:
+        - asset: fonts/Poppins-Bold.ttf
+
+    - family: Poppins-Medium
+      fonts:
+        - asset: fonts/Poppins-Medium.ttf
     - family: Gelasio
       fonts:
         # - asset: fonts/Gelasio-Bold.ttf
