--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   url_launcher: ^5.2.7
   http: ^0.12.0+2
   flutter_webview_plugin: ^0.3.10
+  auto_size_text: ^0.0.2
+  flutter_screenutil: ^0.4.2
 
 
   
@@ -70,6 +72,7 @@ flutter:
     - assets/mogi.jpg
     - assets/cartaz.jpg
     - assets/cartaz2.jpg
+    - assets/walmart.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -87,6 +90,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: Xampolo
+      fonts:
+       - asset: fonts/Cartaz.ttf
     - family: Gelasio
       fonts:
         # - asset: fonts/Gelasio-Bold.ttf
