--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.10
   auto_size_text: ^0.0.2
   flutter_screenutil: ^0.4.2
+  carousel_pro: ^1.0.0
 
 
 
