--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mask_text_input_formatter: ^1.0.5
   flutter_signin_button: ^1.0.0
   font_awesome_flutter: 8.5.0
+  carousel_slider: ^1.4.1
 
 
 
