--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_signin_button: ^1.0.0
   font_awesome_flutter: 8.5.0
   carousel_slider: ^1.4.1
+  cached_network_image: ^2.0.0
 
 
 
