--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  firebase_core: 0.4.0
-  firebase_auth: 0.11.0
+  firebase_core: ^0.4.0
+  firebase_auth: ^0.11.0
   firebase_storage: ^3.0.0
-  cloud_firestore: 0.11.0
+  cloud_firestore: ^0.11.0
   load: ^0.1.5+1
   datetime_picker_formfield: ^0.2.0
   provider: ^3.1.0
