--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cached_network_image: ^2.0.0
   geocoder: ^0.2.1
   email_validator: '^1.0.0'
+  photo_view: ^0.9.2
+  solid_bottom_sheet: ^0.1.9
 
 
 
