--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,13 @@ dependencies:
   http: ^0.12.0+2
   flutter_webview_plugin: ^0.3.10
   auto_size_text: ^0.0.2
+  rflutter_alert: ^1.0.2
   flutter_screenutil: ^0.4.2
   carousel_pro: ^1.0.0
   mask_text_input_formatter: ^1.0.5
   flutter_signin_button: ^1.0.0
   font_awesome_flutter: 8.5.0
+  flutter_email_sender: ^3.0.1
   carousel_slider: ^1.4.1
   cached_network_image: ^2.0.0
   geocoder: ^0.2.1
