--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.ofertas"
+        applicationId "br.ofertas.app"
         minSdkVersion 16
         multiDexEnabled true
         targetSdkVersion 28
