--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   load: ^0.1.5+1
   datetime_picker_formfield: ^0.2.0
   provider: ^3.1.0
+  google_sign_in: ^4.3.0
   geolocator: ^5.2.0
   intl: ^0.15.0
   image_picker: ^0.6.0
