--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   mask_text_input_formatter: ^1.0.5
   flutter_signin_button: ^1.0.0
   font_awesome_flutter: 8.5.0
+  flutter_phoenix: "^0.1.0"
   flutter_email_sender: ^3.0.1
   carousel_slider: ^1.4.1
   cached_network_image: ^2.0.0
