--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   cloud_firestore: ^0.13.4
   load: ^0.1.5+1
   datetime_picker_formfield: ^0.2.0
-  provider: ^3.1.0
   google_sign_in: ^4.3.0
   geolocator: ^5.2.0
   intl: ^0.15.0
@@ -152,6 +151,9 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Regular.ttf
+    - family:  SalesIcon
+      fonts:
+       - asset: icons/SalesIcon.ttf
     # - family: Schyler
     #   fonts:
     #     - asset: fonts/Schyler-Regular.ttf
