--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,15 @@ dependencies:
   datetime_picker_formfield: ^0.2.0
   google_sign_in: ^4.3.0
   geolocator: ^5.2.0
+  firebase_messaging: ^6.0.15
   intl: ^0.15.0
   image_picker: ^0.6.0
+  webview_flutter: ^0.3.21
   page_transition: ^1.1.0
   smooth_star_rating: ^1.0.3
   gradient_app_bar: ^0.1.3
   url_launcher: ^5.2.7
   http: ^0.12.0+2
-  flutter_webview_plugin: ^0.3.10
   auto_size_text: ^0.0.2
   rflutter_alert: ^1.0.2
   flutter_screenutil: ^0.4.2
@@ -53,7 +54,7 @@ dependencies:
   photo_view: ^0.9.2
   solid_bottom_sheet: ^0.1.9
   flutter_spinkit: "^4.1.2"
-
+  simple_rsa: ^0.0.5
 
 
   
